--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GreenNations</title>
+  <title>ABC Pty Ltd</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
